@@ -268,6 +268,7 @@ AC_PATH_PROG(HA,ha)
 AC_PATH_PROG(ANTIVIR,antivir)
 AC_PATH_PROG(FPROT,f-prot)
 AC_PATH_PROG(UVSCAN,uvscan)
+AC_PATH_PROG(CLAMAV,clamscan)
 AC_PATH_PROG(RB,rb)
 AC_PATH_PROG(RB,lrb)
 AC_PATH_PROG(SB,sb)
