@@ -14,17 +14,17 @@
 </HEAD>
 <BODY>
 <BLOCKQUOTE>
-<div align='right'><h5>Last update 15-Jun-2002</h5></div>
+<div align='right'><h5>Last update 11-Apr-2004</h5></div>
 <div align='center'><H1>MBSE BBS Setup - virus scanners</H1></div>
 
 Once upon a time there was no DOS and no computer virusses. But since DOS was
 invented as a small OS which was easily extensible, virus writers saw their
 chance to easy spread their hacks. Although running a GNU/Linux system is 
 relative safe, most of the files that you have available on your bbs 
-are DOS based programs. And before you put them available for download, they 
+are DOS/Windows based programs. And before you put them available for download, they 
 should be checked for virusses. Macro virusses are a relative new danger,
 this can also hurt Unix/Linux users.<P>
-There are several scanners for GNU/Linux available. Default only two of them
+There are several scanners for GNU/Linux available. Default only four of them
 are setup. You may consult <A HREF="http://www.openantivirus.org/">
 http://www.openantivirus.org</A> for more scanners mentioned in a mini-FAQ 
 maintained by Rainer Link.
@@ -49,6 +49,8 @@ This version can be registered for personal use.
 <LI><strong>F-PROT</strong> available from <A
 HREF="http://www.frisk.is">http://www.frisk.is</A>. For now the BETA releases are free
 for personal use.
+<LI><strong>Clam AntiVirus</strong> is a GNU licensed virus scanner for Unix. It
+is available from <A HREF="http://www.clamav.net">www.clamav.net</A>.
 </UL>
 <P>
 As soon as you have made one scanner available in the setup and you receive files
